<resources>
    <string name="app_name">SwapApartment</string>
    <string name="app_displayName">Swap Apartment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="action_sign_in">Se connecter ou s\'enregistrer</string>
    <string name="action_sign_in_short">Se connecter</string>
    <string name="welcome">"Bienvenue !"</string>
    <string name="invalid_username">Nom d\'utilisateur non-valable.</string>
    <string name="invalid_password">Le mot de passe doit faire au moins 6 caractères.</string>
    <string name="login_failed">"Login échoué."</string>


    <string name="title_activity_home_page">SwapApartment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="HomePage_Login">Connectes-toi !</string>
    <string name="HomePage_Create_Login">Crée toi un compte !</string>
    <string name="HomePage_ForgetPassword">Mot de passe oublié ...</string>
    <string name="LoginFP_SendMail">Envoie moi un mail !</string>
    <string name="action_send_mail_success">On t\'a envoyé un mail !</string>
    <string name="action_send_mail_failed">Oups ça ne marche pas .. Réessaie plus tard :)</string>
    <string name="action_send_mail_unknown_address">Oups tu n\'as pas de compte lié à cette adresse ...</string>
    <string name="LoginEP_Name">Nom</string>
    <string name="LoginEP_FirstName">Prénom</string>
    <string name="LoginEP_AccountCreated">Compte créé</string>

    <string name="addapartment">"Ajouter"</string>
    <string name="designation">"Désignation"</string>
    <string name="nbRooms">"Nombre de pièces"</string>
    <string name="price">"Prix"</string>
    <string name="address">"Adresse"</string>
    <string name="add">"Ajouter"</string>
    <string name="locality">"Localité"</string>
    <string name="cancel">"Annuler"</string>

    <string name="connected">Connecté en tant que :</string>
    <string name="done">Terminer</string>
    <string name="delete">Supprimer</string>

    <string name="buyer">"Acheteur"</string>
    <string name="seller">"Vendeur"</string>
    <string name="notification">"Vos notifications :"</string>
    <string name="notificationB">"Notifications"</string>
    <string name="noAppartForLocality">Aucun appartement disponible</string>

</resources>
